--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <!--This is the mobile Navbar-->
         <ul class="sidenav" id="mobile-demo">
             <li>
-                <h4 class="center-align light-blue-text text-darken-4">Recipe Manager</h4>
+                <h4 class="center-align teal text-darken-4">Recipe Manager</h4>
             </li>
             <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
             {% if session.user %}
@@ -62,7 +62,7 @@
         {% if messages %}
         {% for message in messages %}
         <div class="row flashes">
-            <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+            <h4 class="teal lighten-4 center-align">{{ message }}</h4>
         </div>
         {% endfor %}
         {% endif %}
