--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,13 +8,13 @@
           <i class="fas fa-arrow-down"></i>
           <strong>{{ recipe.recipe_name }}</strong> : {{ recipe.due_date }}
           {% if recipe.is_vegan == "on" %}
-          <i class="fas fa-leaf ligh-blue-text text-lighten-2 tooltipped"
+          <i class="fas fa-leaf teal-text text-lighten-2 tooltipped"
           data-position="right" data-tooltip="VEGETARIAN"></i>
           {% endif %}
         </div>
       <div class="collapsible-body">
           <strong>{{ recipe.category_name }}</strong>
-          <P>{{ recipe.recipe_description }}</P>
+          <p>{{ recipe.recipe_description }}</p>
         </div>
     </li>
     {% endfor %}
