--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -4,7 +4,7 @@
 <h3 class="teal-text text-darken-4 center-align">Add Recipe</h3>
 
 <div class="row card-panel teal lighten-5">
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-filter prefix teal-text text-darken-4"></i>
@@ -17,25 +17,27 @@
                 <label for="category_name">Select Category</label>
             </div>
         </div>
+        <!-- Name of Recipe -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-utensils prefix teal-text text-darken-4"></i>
-                <input id="recipe_name" name="recipe_name" minlength="5" maxlength="20" type="text" class="validate"
+                <input id="recipe_name" name="recipe_name" minlength="5" maxlength="50" type="text" class="validate"
                     required>
                 <label for="recipe_name">Recipe Name</label>
             </div>
         </div>
+        <!-- Recipe Body -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pen-nib prefix teal-text text-darken-4"></i>
-                <textarea id="recipe_description" name="recipe_description" minlength="50" maxlength="300"
+                <textarea id="recipe_description" name="recipe_description" minlength="50" maxlength="1000"
                     class="materialize-textarea validate" required></textarea>
                 <label for="recipe_description">Your Awesome Recipe</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <!-- Switch -->
+                <!-- Switch "is Vegetarian" -->
                 <div class="switch">
                     <i class="fas fa-seeding prefix teal-text text-darken-4"></i>
                     <label for="is_vegetarian">
@@ -44,6 +46,14 @@
                         Vegetarian
                     </label>
                 </div>
+            </div>
+        </div>
+        <!-- Submit a Recipe Button -->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large teal darken-1 text-shadow">
+                    Submit <i class="fas fa-plus-square right"></i>
+                </button>
             </div>
         </div>
     </form>
