--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h3 class="teal-text text-darken-4 center-align">List of Recipes</h3>
+
 <ul class="collapsible">
     {% for recipe in recipes %}
     <li>
@@ -15,6 +17,7 @@
       <div class="collapsible-body">
           <strong>{{ recipe.category_name }}</strong>
           <p>{{ recipe.recipe_description }}</p>
+          <p><em>Added by: {{ recipe.created_by }}</em></p>
         </div>
     </li>
     {% endfor %}
