--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,4 +4,13 @@
 
 .flashes h4 {
     line-height: 2;
+}     
+
+.btn-small {
+    margin:6px;
+}
+
+.collapsible-header .col strong {
+    margin: 5px;
+    line-height: 40px;
 }
