--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -6,21 +6,28 @@
 <ul class="collapsible">
     {% for recipe in recipes %}
     <li>
-      <div class="collapsible-header white-text teal darken-4 text-shadow">
-          <i class="fas fa-arrow-down"></i>
-          <strong>{{ recipe.recipe_name }}</strong> : {{ recipe.due_date }}
-          {% if recipe.is_vegan == "on" %}
-          <i class="fas fa-leaf teal-text text-lighten-2 tooltipped"
-          data-position="right" data-tooltip="VEGETARIAN"></i>
-          {% endif %}
+        <div class="collapsible-header white-text teal darken-4 text-shadow">
+            <div class="col s3">
+                <i class="fas fa-arrow-down"></i>
+                <a href="" class="btn-small green accent-4">Delete</a>
+                <a href="" class="btn-small teal accent-4">Edit</a>
+            </div>
+
+            <div class="col s9">
+                <strong>{{ recipe.recipe_name }}</strong>
+                {% if recipe.is_vegan == "on" %}
+                <i class="fas fa-leaf teal-text text-lighten-2 tooltipped" data-position="right"
+                    data-tooltip="VEGETARIAN"></i>
+                {% endif %}
+            </div>
         </div>
-      <div class="collapsible-body">
-          <strong>{{ recipe.category_name }}</strong>
-          <p>{{ recipe.recipe_description }}</p>
-          <p><em>Added by: {{ recipe.created_by }}</em></p>
+        <div class="collapsible-body">
+            <strong>{{ recipe.category_name }}</strong>
+            <p>{{ recipe.recipe_description }}</p>
+            <p><em>Added by: {{ recipe.created_by }}</em></p>
         </div>
     </li>
     {% endfor %}
-  </ul>
+</ul>
 
 {% endblock %}
