connect data to edit form

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,7 +15,7 @@
 
             <div class="col s9">
                 <strong>{{ recipe.recipe_name }}</strong>
-                {% if recipe.is_vegan == "on" %}
+                {% if recipe.is_vegetarian == "on" %}
                 <i class="fas fa-leaf teal-text text-lighten-2 tooltipped" data-position="right"
                     data-tooltip="VEGETARIAN"></i>
                 {% endif %}
