--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -9,9 +9,13 @@
             <div class="input-field col s12">
                 <i class="fas fa-filter prefix teal-text text-darken-4"></i>
                 <select id="category_name" name="category_name" class="validate" required>
-                    <option value="" disabled selected>Choose your option</option>
+                    <option value="" disabled>Choose your option</option>
                     {% for category in categories %}
-                    <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% if category.category_name == recipe.category_name %}
+                        <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                        {% else %}
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
                 <label for="category_name">Select Category</label>
@@ -21,8 +25,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-utensils prefix teal-text text-darken-4"></i>
-                <input id="recipe_name" name="recipe_name" minlength="5" maxlength="50" type="text" class="validate"
-                    required>
+                <input id="recipe_name" name="recipe_name" minlength="5" maxlength="50" 
+                value="{{ recipe.recipe_name }}" type="text" class="validate" required>
                 <label for="recipe_name">Recipe Name</label>
             </div>
         </div>
@@ -30,8 +34,10 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pen-nib prefix teal-text text-darken-4"></i>
-                <textarea id="recipe_description" name="recipe_description" minlength="50" maxlength="1000"
-                    class="materialize-textarea validate" required></textarea>
+                <textarea id="recipe_description" name="recipe_description" minlength="50" 
+                maxlength="1000" class="materialize-textarea validate" required>
+                {{- recipe.recipe_description -}}
+            </textarea>
                 <label for="recipe_description">Your Awesome Recipe</label>
             </div>
         </div>
@@ -41,7 +47,11 @@
                 <div class="switch">
                     <i class="fas fa-seeding prefix teal-text text-darken-4"></i>
                     <label for="is_vegetarian">
+                        {% if recipe.is_vegetarian == "on" %}
+                        <input type="checkbox" id="is_vegetarian" name="is_vegetarian" checked>
+                        {% else %}
                         <input type="checkbox" id="is_vegetarian" name="is_vegetarian">
+                        {% endif %}
                         <span class="lever"></span>
                         Vegetarian
                     </label>
@@ -51,6 +61,9 @@
         <!-- Submit a Recipe Button -->
         <div class="row">
             <div class="col s12 center-align">
+                <a href="{{ url_for('get_recipes') }}" class="btn-large red text-shadow">
+                    Back <i class="fas fa-times-circle right"></i>
+                </a>
                 <button type="submit" class="btn-large teal darken-1 text-shadow">
                     Edit <i class="fas fa-edit right"></i>
                 </button>
