--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,8 +9,10 @@
         <div class="collapsible-header white-text teal darken-4 text-shadow">
             <div class="col s3">
                 <i class="fas fa-arrow-down"></i>
+                {% if session.user|lower == recipe.created_by|lower %}
                 <a href="" class="btn-small green accent-4">Delete</a>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small teal accent-4">Edit</a>
+                {% endif %}
             </div>
 
             <div class="col s9">
