--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -10,7 +10,7 @@
             <div class="col s3">
                 <i class="fas fa-arrow-down"></i>
                 {% if session.user|lower == recipe.created_by|lower %}
-                <a href="" class="btn-small green accent-4">Delete</a>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small green accent-4">Delete</a>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small teal accent-4">Edit</a>
                 {% endif %}
             </div>
