--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,800&display=swap" rel="stylesheet">
     {% block styles %}
     {% endblock %}
     <title>Recipes Manager</title>
@@ -77,12 +79,37 @@
         {% block content %}
         {% endblock %}
     </main>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block scripts %}
     {% endblock %}
+            <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text brand-logo-footer">Cookio!</h5>
+                    <p class="grey-text text-lighten-4">Collaborative recipe book</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Social</h5>
+                    <ul>
+                        <li><i class="fab fa-instagram-square"></i> <a class="grey-text text-lighten-3"
+                                href="#!">Instagram</a></li>
+                        <li><i class="fab fa-twitter-square"></i> <a class="grey-text text-lighten-3"
+                                href="#!">Twitter</a></li>
+                        <li><i class="fab fa-pinterest-square"></i> <a class="grey-text text-lighten-3"
+                                href="#!">Pinterest</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container"> © 2021 All rights reserved - Cookio </div>
+        </div>
+    </footer>
 
 </body>
 
