--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="teal-text text-darken-4 center-align">List of Recipes</h3>
+<h3 class="teal-text text-darken-4 center-align recipe-list">List of Recipes</h3>
 
 <ul class="collapsible">
     {% for recipe in recipes %}
