style titles on css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@
           font-family: 'Rubik', sans-serif;
   }
 
-  .recipe-list {
+  .upper-title {
           font-family: 'Rubik', sans-serif;
-          font-size: large;
+          font-size: x-large;
   }
