--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="teal-text text-darken-4 center-align">Add Recipe</h3>
+<h3 class="teal-text text-darken-4 center-align upper-title">Add Recipe</h3>
 
 <div class="row card-panel teal lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
