--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="teal-text text-darken-4 center-align">Edit Recipe</h3>
+<h3 class="teal-text text-darken-4 center-align upper-title">Edit Recipe</h3>
 
 <div class="row card-panel teal lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
