--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <!--This is the Navbar-->
         <nav class="nav-extended text-shadow teal lighten-1">
             <div class="nav-wrapper">
-                <a href="{{ url_for('get_recipes') }}" class="brand-logo">Cookio!</a>
+                <a href="{{ url_for('get_recipes') }}" class="brand-logo center">Cookio!</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
