--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
+  
+    <div class="row card-pane s12 m12">
+      <div class="card">
+        <div class="card-image">
+          <img src="/static/images/cookio-image.webp">
+        </div>
+        <div class="card-content">
+          <p>This is cookio! the BEST collaborative recipe database. 
+             Cookio! gives users a very simple way to create, edit and save recipes fivided into categories 
+             to create an evergrowing digital cookbook.
+            Simply create an account and start sharing your culinary wisdom woith the rest of us.</p>
+        </div>
+      </div>
+    </div>
+ 
+
 <h3 class="teal-text text-darken-4 center-align upper-title">List of Recipes</h3>
 <div class="row card-panel grey lighten-5">
     <form action="{{ url_for('search') }}" method="post" class="col s12">
