--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large teal darken-1 text-shadow">
-                    Add <i class="fas fa-plus-square right"></i>
+                    Add <i class="fas fa-plus right"></i>
                 </button>
             </div>
         </div>
