--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large teal darken-1 text-shadow">
-                    Submit <i class="fas fa-plus-square right"></i>
+                    Submit <i class="fas fa-plus right"></i>
                 </button>
             </div>
         </div>
