--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
         <div class="col s12 m8 offset-m2">
             <div class="card-panel teal lighten-5">
                <h3 class="center-align teal-text text-darken-4">
-                   {{ username }}'s Profile
+                   Welcome! You are logged in as {{ username }}
                </h3>
             </div>
         </div>
