--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -45,7 +45,7 @@
                 <i class="fas fa-arrow-down"></i>
                 {% if session.user|lower == recipe.created_by|lower %}
                 <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                    class="btn-small green accent-4">Delete</a>
+                    class="btn-small green accent-4" onclick="return confirm(' Are you sure want to delete?');" >Delete</a>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small teal accent-4">Edit</a>
                 {% endif %}
             </div>
