--- a/templates/categories.html
+++ b/templates/categories.html
@@ -20,7 +20,8 @@
             </div>
             <div class="card-action">
                 <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn teal accent-5">Edit</a>
-                <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn orange lighten-1"  onclick="return confirm(' Are you sure want to remove this Category?');" >Remove</a>
+                <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn orange lighten-1"
+                    onclick="return confirm(' Are you sure want to remove this Category?');">Remove</a>
             </div>
         </div>
     </div>
