--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -11,11 +11,11 @@
                 <select id="category_name" name="category_name" class="validate" required>
                     <option value="" disabled>Choose your option</option>
                     {% for category in categories %}
-                        {% if category.category_name == recipe.category_name %}
-                        <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
-                        {% else %}
-                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                        {% endif %}
+                    {% if category.category_name == recipe.category_name %}
+                    <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                    {% else %}
+                    <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                    {% endif %}
                     {% endfor %}
                 </select>
                 <label for="category_name">Select Category</label>
@@ -25,8 +25,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-utensils prefix teal-text text-darken-4"></i>
-                <input id="recipe_name" name="recipe_name" minlength="5" maxlength="50" 
-                value="{{ recipe.recipe_name }}" type="text" class="validate" required>
+                <input id="recipe_name" name="recipe_name" minlength="5" maxlength="50" value="{{ recipe.recipe_name }}"
+                    type="text" class="validate" required>
                 <label for="recipe_name">Recipe Name</label>
             </div>
         </div>
@@ -34,8 +34,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pen-nib prefix teal-text text-darken-4"></i>
-                <textarea id="recipe_description" name="recipe_description" minlength="50" 
-                maxlength="1000" class="materialize-textarea validate" required>
+                <textarea id="recipe_description" name="recipe_description" minlength="50" maxlength="1000"
+                    class="materialize-textarea validate" required>
                 {{- recipe.recipe_description -}}
             </textarea>
                 <label for="recipe_description">Your Awesome Recipe</label>
