--- a/templates/login.html
+++ b/templates/login.html
@@ -1,45 +1,45 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align upper-title ">Enter your credentials</h3>
+<h3 class="center-align upper-title ">Enter your credentials</h3>
 
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
-            <div class="card-panel">
-                <!-- username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="fas fa-users prefix teal-text text-darken-4"></i>
-						<input id="username" name="username" type="text" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Enter your Username</label>
-					</div>
-                </div>
-                <!-- passowrd -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="fas fa-unlock-alt prefix teal-text text-darken-4"></i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Enter your Password</label>
-                    </div>
-                </div>
-                <!-- Login -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large teal darken-4 text-shadow">
-                        Log In <i class="fas fa-sign-in-alt"></i>
-                    </button>
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+        <div class="card-panel">
+            <!-- username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-users prefix teal-text text-darken-4"></i>
+                    <input id="username" name="username" type="text" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="username">Enter your Username</label>
                 </div>
             </div>
-        </form>
-    </div>
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                New Cookio? 
-                <a href="{{ url_for('register') }}" class="teal-text text-darken-4">Register HERE</a>
-            </p>
+            <!-- passowrd -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-unlock-alt prefix teal-text text-darken-4"></i>
+                    <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="password">Enter your Password</label>
+                </div>
+            </div>
+            <!-- Login -->
+            <div class="row">
+                <button type="submit" class="col s12 btn-large teal darken-4 text-shadow">
+                    Log In <i class="fas fa-sign-in-alt"></i>
+                </button>
+            </div>
         </div>
+    </form>
+</div>
+<div class="row">
+    <div class="col s12">
+        <p class="center-align">
+            New Cookio?
+            <a href="{{ url_for('register') }}" class="teal-text text-darken-4">Register HERE</a>
+        </p>
     </div>
+</div>
 
 {% endblock %}
