--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,13 @@
-404 Not Found
+<div class="row">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title"><strong>404 Not Found</strong></span>
+          <p>The item you are looking found cannot be found</p>
+        </div>
+        <div class="card-action">
+          <a href="{{ url_for('get_recipes') }}">Go Back</a>
+        </div>
+      </div>
+    </div>
+  </div>
