Add Materialize Modal to confirm deletion. Styled buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,6 +111,17 @@
         </div>
     </footer>
 
+    <!-- Modal Structure -->
+    <div id="confirmation-dialog" class="modal">
+        <div class="modal-content">
+            <h4>Are you sure you want to proceed?</h4>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" id="modal-ok-btn" class="modal-close waves-effect waves-green btn-flat">Ok</a>
+        </div>
+    </div>
+
 </body>
 
 </html>
