--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title"><strong>404 Not Found</strong></span>
-          <p>The item you are looking found cannot be found</p>
+          <p>The item you are looking for cannot be found</p>
         </div>
         <div class="card-action">
           <a href="{{ url_for('get_recipes') }}">Go Back</a>
