--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -62,10 +62,10 @@
         <div class="row">
             <div class="col s12 center-align">
                 <a href="{{ url_for('get_recipes') }}" class="btn-large red text-shadow">
-                    Back <i class="fas fa-times-circle right"></i>
+                    Cancel <i class="fas fa-times-circle right"></i>
                 </a>
                 <button type="submit" class="btn-large teal darken-1 text-shadow">
-                    Edit <i class="fas fa-edit right"></i>
+                    Save <i class="fas fa-edit right"></i>
                 </button>
             </div>
         </div>
