--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,6 @@
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{ url_for('add_recipe') }}">New Recipe</a></li>
                     {% if session.user|lower == "admin"|lower %}
                     <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
                     {% endif %}
@@ -114,7 +113,7 @@
     <!-- Modal Structure -->
     <div id="confirmation-dialog" class="modal">
         <div class="modal-content">
-            <h4>Are you sure you want to proceed?</h4>
+            <h4>Are you sure that you want to proceed?</h4>
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
