--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -24,7 +24,7 @@
             <div class="input-field col s12 m8">
                 <i class="fas fa-search prefix teal-text text-darken-4"></i>
                 <input type="text" name="query" id="query" minlength="2" class="validate" required>
-                <label for="query">Search in Recipes</label>
+                <label for="query">Search</label>
             </div>
             <div class="col s12 m4">
                 <a href="{{ url_for('get_recipes') }}" class="red btn text-shadow">Reset</a>
